[FIX] web_mobile,sale_enterprise: title is missing in some form views
Due to commit e2040228022594c1eb85a9ee7e97623e74ed88a9, whom hides the
form view's title, some side effect appeared in other form views :
* name is not editable (eg. in task, crm...)
* star/favorite is not visible (eg. task, subscription...)
* state is not visible (eg. task, subscription...)

This commit reverts global hidding of the form view's title.

As the task related to the original commit targeted only the Sale Order
view this commit keeps the desired behavior exclusively for this view.

Original Task ID: 1910385

closes odoo/enterprise#3919

--- a/web_mobile/static/src/scss/form_view_mobile.scss
+++ b/web_mobile/static/src/scss/form_view_mobile.scss
@@ -10,10 +10,6 @@
             padding-bottom: 4px;
         }
 
-        .o_form_sheet > div.oe_title {
-            display: none;
-        }
-
         .o_group {
             margin-top: 0;
 
